crates/gossamer-diagnostics/tests/snapshots/GL0049.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0049]: `panic()` with no argument leaves the post-mortem with nothing - here
--- framed ---
error[GL0049]: `panic()` with no argument leaves the post-mortem with nothing
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
