crates/gossamer-diagnostics/tests/snapshots/GL0051.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0051]: A counted loop only assigns the same value to every element of a - here
--- framed ---
error[GL0051]: A counted loop only assigns the same value to every element of a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
