crates/gossamer-diagnostics/tests/snapshots/GL0052.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0052]: A scan calls `s.substring(i, i + 1)`, allocating a String per step. - here
--- framed ---
error[GL0052]: A scan calls `s.substring(i, i + 1)`, allocating a String per step.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
