crates/gossamer-diagnostics/tests/snapshots/GL0053.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0053]: A `go` inside a `cohort { }` spawns a goroutine the cohort does not - here
--- framed ---
error[GL0053]: A `go` inside a `cohort { }` spawns a goroutine the cohort does not
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
