crates/gossamer-diagnostics/tests/snapshots/GL0055.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0055]: A signature with no return type answers a unit, so the value the - here
--- framed ---
error[GL0055]: A signature with no return type answers a unit, so the value the
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
