crates/gossamer-diagnostics/tests/snapshots/GP0001.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0001]: The parser saw a token where it expected a different one. - here
--- framed ---
error[GP0001]: The parser saw a token where it expected a different one.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
