crates/gossamer-diagnostics/tests/snapshots/GP0004.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0004]: Comparison operators like `==` / `!=` / `<` are not associative. — here
--- framed ---
error[GP0004]: Comparison operators like `==` / `!=` / `<` are not associative.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
