crates/gossamer-diagnostics/tests/snapshots/GP0005.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0005]: Range operators (`..`, `..=`) are not associative. — here
--- framed ---
error[GP0005]: Range operators (`..`, `..=`) are not associative.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
