crates/gossamer-diagnostics/tests/snapshots/GP0006.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0006]: A braced struct literal in the scrutinee of `if`/`while`/`match` — here
--- framed ---
error[GP0006]: A braced struct literal in the scrutinee of `if`/`while`/`match`
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
